add front for analyzed hardcoded only for view later change / cpu sleep timer to 1000

--- a/Analyzed.xaml
+++ b/Analyzed.xaml
@@ -5,11 +5,146 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:analyseOBS_Tool"
         mc:Ignorable="d"
-        Title="Analyzed" Height="600" Width="800"
-        ResizeMode="NoResize">
+        Title="Analyzed" Height="700" Width="600"
+        MinHeight="700" MinWidth="600"
+        >
     <Grid>
-        <Label x:Name="cpu_label" Content="CPU" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" FontSize="100"/>
-        <Label x:Name="ram_label" Content="RAM" HorizontalAlignment="Left" Margin="270,11,0,0" VerticalAlignment="Top" FontSize="100"/>
-        <Label x:Name="gpu_label" Content="GPU" HorizontalAlignment="Left" Margin="550,11,0,0" VerticalAlignment="Top" FontSize="100"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" MinWidth="1"/>
+            <ColumnDefinition Width="1.4*" MinWidth="1.4"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0">
+            <TextBlock x:Name="cpu_textblock" Text="CPU: 90 %" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="50"/>
+            <TextBlock x:Name="ram_textblock" Text="RAM: 90 %" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="50"/>
+            <TextBlock x:Name="gpu_textblock" Text="GPU: 90 %" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="50"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Margin="5">
+            <TextBlock Background="BlueViolet" Foreground="White" Height="Auto" Text="1080p 60fps" FontSize="38"/>
+            <StackPanel Margin="8">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                </Grid>
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <Label Content="Resolution: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="1920x1080"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                    <Label Content="Bitrate: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="6000kbps"/>
+                </StackPanel>
+                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                    <Label Content="Rate Control: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="CBR"/>
+                </StackPanel>
+                <StackPanel Grid.Row="3" Orientation="Horizontal">
+                    <Label Content="Framerate: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="60 or 50 fps"/>
+                </StackPanel>
+                <StackPanel Grid.Row="4" Orientation="Horizontal">
+                    <Label Content="Keyframe Interval: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="2 seconds"/>
+                </StackPanel>
+                <StackPanel Grid.Row="5" Orientation="Horizontal">
+                    <Label Content="Preset: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="veryfast &lt;-> medium"/>
+                </StackPanel>
+                <StackPanel Grid.Row="6" Orientation="Horizontal">
+                    <Label Content="Profile: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="Profile: Main/High"/>
+                </StackPanel>
+            </StackPanel>
+            <TextBlock Background="BlueViolet" Foreground="White" Height="Auto" Text="1080p 30fps" FontSize="38"/>
+            <StackPanel Margin="8">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                </Grid>
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <Label Content="Resolution: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="1920x1080"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                    <Label Content="Bitrate: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="4500kbps"/>
+                </StackPanel>
+                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                    <Label Content="Rate Control: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="CBR"/>
+                </StackPanel>
+                <StackPanel Grid.Row="3" Orientation="Horizontal">
+                    <Label Content="Framerate: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="25 or 30 fps"/>
+                </StackPanel>
+                <StackPanel Grid.Row="4" Orientation="Horizontal">
+                    <Label Content="Keyframe Interval: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="2 seconds"/>
+                </StackPanel>
+                <StackPanel Grid.Row="5" Orientation="Horizontal">
+                    <Label Content="Preset: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="veryfast &lt;-> medium"/>
+                </StackPanel>
+                <StackPanel Grid.Row="6" Orientation="Horizontal">
+                    <Label Content="Profile: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="Main/High"/>
+                </StackPanel>
+            </StackPanel>
+            <TextBlock Background="BlueViolet" Foreground="White" Height="Auto" Text="720p 60fps / 30fps" FontSize="38"/>
+            <StackPanel Margin="8">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                </Grid>
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <Label Content="Resolution: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="1280x720"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                    <Label Content="Bitrate: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="4500kbps / 3000kbps"/>
+                </StackPanel>
+                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                    <Label Content="Rate Control: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="CBR"/>
+                </StackPanel>
+                <StackPanel Grid.Row="3" Orientation="Horizontal">
+                    <Label Content="Framerate: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="60 / 30 fps"/>
+                </StackPanel>
+                <StackPanel Grid.Row="4" Orientation="Horizontal">
+                    <Label Content="Keyframe Interval: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="2 seconds"/>
+                </StackPanel>
+                <StackPanel Grid.Row="5" Orientation="Horizontal">
+                    <Label Content="Preset: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="veryfast &lt;-> medium"/>
+                </StackPanel>
+                <StackPanel Grid.Row="6" Orientation="Horizontal">
+                    <Label Content="Profile: " FontWeight="Bold" FontSize="16" VerticalContentAlignment="Center" Padding="0"/>
+                    <TextBlock FontSize="16" Text="Main / High"/>
+                </StackPanel>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
